--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,14 @@ services:
 
     mariadb:
         container_name: database
-        build: ./src/mariadb
+        build:
+            context: ./src/mariadb
+            dockerfile: Dockerfile
+            args:
+                DB_NAME: ${DB_NAME}
+                DB_USER: ${DB_USER}
+                DB_PASSWD: ${DB_PASSWD}
+                DB_ROOT_PASSWD: ${DB_ROOT_PASSWD}
         expose:
             - "3306"
         env_file:
@@ -25,7 +32,14 @@ services:
 
     php:
         container_name: wordpress
-        build: ./src/wordpress
+        build:
+            context: ./src/wordpress
+            dockerfile: Dockerfile
+            args:
+                DB_HOST: ${DB_HOST}
+                DB_NAME: ${DB_NAME}
+                DB_USER: ${DB_USER}
+                DB_PASSWD: ${DB_PASSWD}
         expose:
             - "9000"
         env_file:
